fix gap style

--- a/ishop0/components/Product.css
+++ b/ishop0/components/Product.css
@@ -1,6 +1,6 @@
 .product {
     display: flex;
     flex-wrap: wrap;
-    gap: 24px;
+    gap: 32px 24px;
     align-items: stretch;
 }
